<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activites.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_30"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/size_30"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginTop="@dimen/size_50"
            android:text="@string/email"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_squre_border"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:layout_marginTop="@dimen/size_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/et_Email" />

        <EditText
            android:id="@+id/et_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_squre_border"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="@dimen/size_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:layout_marginLeft="@dimen/size_50"
            android:layout_marginTop="@dimen/size_40"
            android:layout_marginRight="@dimen/size_50"
            android:background="@drawable/white_curve_border"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/et_Pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>